# final_assignement_PSE

./: CMakeLists.txt  README.md  arrivi_linea_a.txt  arrivi_linea_b.txt
app/: CMakeLists.txt
app/src/: main.cpp
input_file/: arrivi_linea_b.txt
lib/box/: CMakeLists.txt
lib/box/include/: box.h
lib/box/src/: box.cpp
lib/cobot/: CMakeLists.txt
lib/cobot/include/: cobot.h
lib/cobot/src/: cobot.cpp
lib/global_variables/: CMakeLists.txt
lib/global_variables/include/: global_variables.h
lib/global_variables/src/: global_variables.cpp
lib/piece/: CMakeLists.txt
lib/piece/include/: piece.h
lib/piece/src/: piece.cpp
lib/piece_buffer/: CMakeLists.txt
lib/piece_buffer/include/: piece_buffer.h
lib/piece_buffer/src/: piece_buffer.cpp
lib/store/: CMakeLists.txt
lib/store/include/: store.h
lib/store/src/: store.cpp
lib/vision_system/: CMakeLists.txt
lib/vision_system/include/: vision_system.h
lib/vision_system/src/: vision_system.cpp
